--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Resume for future inquiries.">
+  <meta name="author" content="862328385">
 
-  <title>John Doe - Business Administration</title>
+  <title>Samadhi Torres - Full Time Student</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Samadhi Torres</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/samadhitorres (1).png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,52 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Samadhi Torres
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Philosophy Major📚</div>
+        <p class="lead mb-4">Maintaining a professional demeanor is crucial in today's fast-paced and highly competitive work environment.
+        Creating a healthy and effective working environment requires more than just dressing nicely or speaking formally. It entails a combination of behaviors and attitudes. 
+        The level of professionalism one exhibits is a direct reflection of their passion, honesty, and respect towards others. Punctuality is a crucial aspect in the professional
+        realm as it demonstrates a diligent work ethic and a regard for the time of others. Proficiency in effective communication is another crucial element of professionalism. 
+        This can be achieved by employing concise and unambiguous emails, delivering articulate presentations, or engaging in active listening during appointments. 
+<br><br>
 
-        Enter bio here<br><br>
+        Furthermore, professionalism involves the manner in which individuals handle challenges and conflicts. A professional attitude necessitates maintaining equanimity in 
+        challenging situations, addressing problem-solving with a rational mindset, and seeking constructive solutions. As a result, it not only fosters a happy working environment,
+        but also exemplifies concepts of leadership. Professionalism necessitates ethical behavior, which prioritizes honesty, transparency, and accountability. Maintaining a high 
+        ethical standard fosters confidence among colleagues, clients, and supervisors, so promoting enduring partnerships and a favorable reputation.
 
-        Enter bio here
+
+The establishment and upkeep of a professional atmosphere rely not solely on the conduct of individuals, but also on the collective endeavors of the team. 
+To achieve successful collaboration with diverse teams, it is essential to possess an open mind, adaptability, and a willingness to explore new perspectives. 
+The process involves recognizing and appreciating the unique skills and qualities that each team member contributes. Furthermore, professionalism encompasses not
+just the behavior displayed within the workplace, but also the way individuals conduct themselves and their businesses in other community situations. Preserving a 
+professional demeanor is crucial for both personal and organizational effectiveness. This can be achieved by engaging in activities such as attending networking events, 
+actively participating on social media platforms, or taking part in business conferences through active involvement.
+<br><br>
+
+        In order to remain relevant and competitive in a professional environment, it is crucial to engage in continual learning and skill development. Professionals are 
+        anticipated to possess up-to-date expertise regarding the most recent advancements, patterns, and optimal methodologies in their specific domains. This dedication 
+        to acquiring knowledge not only enhances individuals' understanding, but it also contributes to the overall expansion and innovation of the organization. One further 
+        characteristic that sets a true professional apart is their consistent use of a proactive and solution-focused mindset in all aspects of their work. Professionals 
+        dedicate their effort to developing pragmatic solutions and potential areas for enhancement, rather than fixating on the issues they encounter.
+Ultimately, professionalism encompasses a comprehensive strategy that integrates all facets of personal and interpersonal skills. It explores beyond the surface level of 
+appearance and communication, delving into the core beliefs and behaviors that define a person in a professional environment. In order to cultivate professionalism, it is
+imperative to consistently be self-aware, dedicate oneself to personal growth, and possess a genuine aspiration to have a positive impact in both the workplace and the broader
+community. 
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.npr.org/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/SamadhiTorres">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.ted.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:storr109@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +118,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://lacountylibrary.org/location/a-c-bilbrew-library/">Ac Bilbrew Library</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Clean and organize books<br> 
+              • Plan and host book clubs<br>
+              • Tutor and supervise young children<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2018 - April 2019</span>
           </div>
         </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+          <div class="resume-content">
+            <h3 class="mb-0">Babysitter</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.care.com/jobs?_qs=1&msclkid=2a27388ca4311acbb60c5d33b2b16405&utm_source=bing&utm_medium=cpc&utm_campaign=Provider_Brand_e_BGC01398&utm_content=brand_general_e&utm_term=care%2520com%2520jobs&mt=provider">Care.</a></div>
+            <p>
+              • Responsible for looking after childern<br>
+              • Picking up children after school<br>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2022 - October 2023</span>
+          </div>
+        </div>
+
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.traderjoes.com/home">Trader Joe's</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
-          </div>
-        </div>
-
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
-          <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
-            <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Ring up customers<br>
+            • Stock up shelves occasionally<br>
+            • Greet customers<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2023 - September 2023</span>
           </div>
         </div>
 
@@ -152,33 +177,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachellors in Philosophy</div>
+            <div>BA in Philosophy</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2021 - September 2025</span>
           </div>
         </div>
 
@@ -191,7 +194,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+             <img src="img/cute wallpaper.jpg" width="500px">
+    <img src="img/Illusbyjo.jpg" width="500px"><br>
+    <img src="img/download (1).png" width="500px">
+    <img src="img/download (2).jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +205,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Samadhi Torres</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
